# hackathon

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
fastapi/: .gitignore  pyproject.toml
fastapi/prisma/migrations/20241110170627_initial_migration/: migration.sql
fastapi/src/: app.py
nextapp/: package-lock.json  package.json
